# sentineliam

./: .bumpversion.cfg  .bumpversion.toml  .coverage  README.md  config.py  pyproject.toml
backend/: .bumpversion.toml  .coverage  .env  README.md  bump_version.sh  coverage.xml  pyproject.toml  requirements.txt
backend/.github/workflows/: ci.yml  publish.yml
backend/src/engine/: renderer.py  validator.py
backend/src/sentinel.egg-info/: SOURCES.txt  requires.txt
backend/src/sentineliam.egg-info/: PKG-INFO  SOURCES.txt
backend/src/templates/: AllowAdmin.j2  test-template.j2
backend/tests/: test_validator.py
frontend/: .env.local  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.next/: build-manifest.json  trace
frontend/.next/server/: _error.js  middleware-build-manifest.js  pages-manifest.json
frontend/.next/server/pages/: _app.js  _error.js  audit.js  templates.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: _error.js  webpack.js
frontend/.next/static/development/: _buildManifest.js
frontend/.next/static/webpack/: webpack.457cfc86d17088d0.hot-update.js  (+1 more)
frontend/src/components/: LogTable.tsx  PolicyPreview.tsx  TemplateList.tsx
frontend/src/data/: mockLogs.ts  mockTemplates.ts
frontend/src/hooks/: useAuditLogs.ts  useTemplates.ts
frontend/src/pages/: audit.tsx  index.tsx  templates.tsx
src/cli/: main.py
src/engine/: audit.py
src/sentinel.egg-info/: PKG-INFO
src/templates/: test_template.j2
tests/: test_audit.py  test_cli.py  test_renderer.py
(+9 files in other folders)
